# figanos

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint.yaml  .zenodo.json  AI_POLICY.md  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  coverage.lcov  environment-dev.yml  environment-docs.yml  environment.yml  pyproject.toml  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  spirograph_docs.ipynb  tox.ini  tox.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: actions-versions-updater.yml  auto-accept-ci-changes.yml  bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
docs/: Makefile  api.rst  conf.py  gallery.rst  index.rst  installation.rst  make.bat  releasing.rst  usage.rst
docs/apidoc/: figanos.matplotlib.rst  figanos.rst  modules.rst
docs/notebooks/: figanos_colours.ipynb  figanos_docs.ipynb  figanos_hvplot.ipynb  figanos_maps.ipynb  figanos_misc.ipynb  figanos_multiplots.ipynb  figanos_timeseries.ipynb  index.rst  spirograph_docs.ipynb
docs/notebooks/tests/: gdfmap_test.ipynb
figanos/: __init__.py  _logo.py  cli.py  logo.py
figanos/data/: colors.json  terms.yml
figanos/data/ipcc_colors/: README.txt
figanos/data/ipcc_colors/categorical_colors_rgb_0-255/: chem_cat.txt
figanos/hvplot/: __init__.py  plot.py  utils.py
figanos/hvplot/style/: bokeh_theme.yml
figanos/matplotlib/: __init__.py  _partitioning.py  plot.py  utils.py
spirograph/: __init__.py  cli.py  example.py  plot.py  utils.py
spirograph/data/: colors.json  precision.json  translate.json
spirograph/data/ipcc_colors/: categorical_colors.json  variable_groups.json
spirograph/data/ipcc_colors/categorical_colors_rgb_0-255/: ssp_cat_2.txt
spirograph/hvplot/: plot.py  utils.py
spirograph/matplotlib/: __init__.py  get_example_data.py  plot.py  timeseries.py  timeseries_test.py  util_fcts.py  utils.py
spirograph/matplotlib/style/: ouranos.mplstyle  paper.mplstyle
spirograph/mpl/: __init__.py  _partitioning.py
spirograph/tools/style/: ouranos.mplstyle  ouranos_2.mplstyle  poster.mplstyle
src/figanos/: __init__.py  _data.py  _logo.py  _testing.py
src/figanos/data/: terms.yml
src/figanos/data/ipcc_colors/: README.md  README.txt  categorical_colors.json  variable_groups.json
src/figanos/data/ipcc_colors/categorical_colors_rgb_0-255/: ssp_cat_1.txt
src/figanos/data/test_data/: hatchmap-ens_stats.nc  hatchmap-inf_5.nc  hatchmap-sup_8.nc
src/figanos/hvplot/: __init__.py  plot.py  utils.py
src/figanos/hvplot/style/: ouranos.yml
src/figanos/matplotlib/: __init__.py  _style.py  plot.py  utils.py
src/figanos/matplotlib/style/: ouranos.mplstyle  transparent.mplstyle
tests/: __init__.py  conftest.py  test_figanos.py  test_spirograph.py
