[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "figanos"
authors = [
  {name = "Sarah-Claude Bourdeau-Goulet", email = "bourdeau-goulet.sarah-claude@ouranos.ca"},
  {name = "Juliette Lavoie", email = "lavoie.juliette@ouranos.ca"},
  {name = "Alexis Beaupré-Laperrière", email = "Beaupre-Laperriere.Alexis@ouranos.ca"}
]
maintainers = [
  {name = "Sarah-Claude Bourdeau-Goulet", email = "bourdeau-goulet.sarah-claude@ouranos.ca"},
  {name = "Juliette Lavoie", email = "lavoie.juliette@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["figanos"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "cartopy >=0.23.0",
  "cairosvg >=2.6.0",
  "geopandas >=1.0",
  "matplotlib >=3.8.0",
  "numpy >=1.25.0",
  "pandas >=2.2.0",
  "pint >=0.18",
  "platformdirs >=4.0",
  "pyyaml >=6.0.1",
  "seaborn >=0.13.0",
  "scikit-image >=0.21.0",
  "xarray >=2023.11.0",
  "xclim >=0.52.2",
  "xsdba >=0.4.0"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "bump-my-version >=1.2.3",
  "coverage >=7.5.0",
  "deptry >=0.23.1",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.4.0",
  "flit >=3.11.0,<4.0",
  "mypy >=1.18.2",
  "numpydoc >=1.9.0",
  "pip >=25.2",
  "pre-commit >=3.5.0",
  "pytest >=8.3.2",
  "pytest-cov >=5.0.0",
  "ruff >=0.14.3",
  "tox >=4.30.3",
  "vulture >=2.14",
  "watchdog >=4.0.0"
]
docs = [
  # To make the package and notebooks usable
  "dask",
  "geoviews",
  "h5py",
  "holoviews",
  "netcdf4",
  "pooch >=1.8.0", # for local and xclim-testdata
  "zarr >=2.13.0",
  # Documentation
  "ipykernel",
  "ipython >=8.5.0,!=9.0.0",
  "jupyter_client",
  "nbsphinx >=0.9.8",
  "notebook",
  "sphinx >=8.2",
  "sphinx-book-theme >=1.0",
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton",
  "sphinx-intl"
]
all = ["figanos[dev]", "figanos[docs]"]

[project.urls]
"Homepage" = "https://figanos.readthedocs.io/"
"Changelog" = "https://figanos.readthedocs.io/en/stable/changelog.html"
"Issue tracker" = "https://github.com/Ouranosinc/figanos/issues"
"Source" = "https://github.com/Ouranosinc/figanos"
"About Ouranos" = "https://ouranos.ca/en/"

[tool]

[tool.bumpversion]
current_version = "0.6.0"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/Ouranosinc/figanos>`_ (latest)
--------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/Ouranosinc/figanos>`_ (latest)
    --------------------------------------------------------------

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/Ouranosinc/figanos/tree/{new_version}>`_ ({now:%Y-%m-%d})
-------------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "^version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/figanos/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_figanos.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
ignore-words-list = "ans,astroid,fonction,socio-economic,vas,vie"

[tool.coverage.paths]
source = ["src/figanos/", "*/site-packages/figanos/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["figanos"]

[tool.deptry]
extend_exclude = ["docs"]
pep621_dev_dependency_groups = ["all", "dev", "docs"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "docs/*.rst",
  "docs/Makefile",
  "docs/_static/_gallery/*.png",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/conf.py",
  "docs/make.bat",
  "docs/notebooks/.ipynb",
  "environment-dev.yml",
  "src/figanos",
  "tests/*.py",
  "tox.toml"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/figanos*.rst",
  "docs/locales",
  "src/figanos/data/test_data/*.nc"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "cairosvg.*",
  "cartopy.*",
  "matplotlib.*",
  "mpl_toolkits.*",
  "geopandas.*",
  "holoviews.*",
  "numpy.*",
  "pandas.*",
  "scipy.*",
  "seaborn.*",
  "skimage.transform.*",
  "tests.*",
  "xarray.*",
  "xclim.*",
  "yaml.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01",
  # FIXME: The following exceptions should be addressed
  "GL01",
  "GL08",
  "PR01",
  "PR02",
  "PR03",
  "PR04",
  "PR05",
  "PR06",
  "PR08",
  "PR09",
  "RT01",
  "RT05",
  "PR10",
  "RT03"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = [
  "tests"
]

[tool.ruff]
src = ["figanos"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs/conf.py"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "B008", # function-call-in-default-argument  # FIXME: should be fixed ASAP
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["figanos"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/figanos/**/__init__.py" = ["F401", "F403"]
"src/figanos/matplotlib/**/*.py" = ["C901"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/figanos", "tests"]
sort_by_size = true
